# Inter-Planet-Museumvault

./: .gitignore  Dockerfile  Dockerfile-humble  README.md  assignment.txt  run_container.sh  run_plansys2_container.sh  run_second_plansys2.sh  setup.sh  trace.json
2.1/: OUTPUT.md  README.md  domain.pddl  downward.tmp.205  downward.tmp.265  elapsed.time  output  output.sas  plan_numbers_and_cost  problem.pddl  sas_plan
2.1/coincise_implementation/base_case/: README.md  domain.pddl  problem.pddl
2.1/coincise_implementation/base_case/logs_statistics/base/: evaluation.txt  terminal.txt
2.1/coincise_implementation/base_case/logs_statistics/heavy/: evaluation.txt  terminal.txt
2.1/coincise_implementation/base_case/logs_statistics/moderate/: evaluation.txt  terminal.txt
2.1/coincise_implementation/base_case/logs_statistics/stress/: evaluation.txt  terminal.txt
2.1/intermediate_pipeline_files/: output  output.sas
2.1/logs_statistics/: elapsed.time  plan_numbers_and_cost
2.1/vanilla_implementation/base_case/: OUTPUT.md  domain.pddl  sas_plan
2.1/vanilla_implementation/base_case/logs_statistics/: elapsed.time  evaluation.txt  terminal.txt
2.1/vanilla_implementation/base_case/policy/: output  output.sas  policy.out
2.1/vanilla_implementation/scaled_case/: README.md  problem.pddl
2.1/vanilla_implementation/scaled_case/logs_statistics/heavy/: elapsed.time  evaluation.txt  plan_numbers_and_cost  terminal.txt
2.1/vanilla_implementation/scaled_case/logs_statistics/moderate/: elapsed.time  evaluation.txt  terminal.txt
2.1/vanilla_implementation/scaled_case/logs_statistics/stress/: elapsed.time  evaluation.txt  terminal.txt
2.1/viz/comic_book/: page_000.json  page_001.json  page_002.json  page_003.json  page_004.json  page_005.json  page_006.json  page_007.json  page_008.json  page_009.json  page_010.json  page_011.json  page_012.json  page_013.json  page_014.json  page_015.json  page_016.json  page_017.json  page_018.json  page_019.json  page_020.json  page_021.json  page_022.json  page_023.json  page_024.json  page_025.json  page_026.json  page_027.json  page_028.json  page_029.json  page_030.json  page_031.json  page_032.json
2.2/: README.md  domain.pddl  downward.tmp.1630  downward.tmp.222  downward.tmp.2531  downward.tmp.2592  downward.tmp.2714  downward.tmp.2774  downward.tmp.2892  downward.tmp.3130  downward.tmp.3254  downward.tmp.449  elapsed.time  output  output.sas  plan_numbers_and_cost  policy.fsap  policy.out  problem.pddl  problem_s.pddl  sas_plan
2.2/action_cost/: domain.pddl  elapsed.time  output.sas  problem.pddl  sas_plan  sas_plan.1
2.2/deterministic/: domain.pddl  output.sas  problem.pddl  sas_plan  sas_plan.1
2.2/drone/: README.md  domain.pddl  problem.pddl  sas_plan
2.3/: HTN_Plan_Depth_1  HTN_Plan_Depth_2  HTN_Plan_Depth_99  README.md  domain.hddl  minimal-problem.hddl  problem.hddl  render.py  solution.dot  terminal.txt
2.3/delivery_search/: README.md  albero_a4.dot  domain.hddl  minimal-problem.hddl  parser.py  problem.hddl  raw_plan.dot
2.3/delivery_task/: README.md  domain.hddl  problem.hddl  raw_plan.dot  structured-result.txt  terminal.txt
2.3/delivery_task/graph/: README.md  delivery_task_1.dot  delivery_task_1_l.dot  delivery_task_1_r.dot  delivery_task_2.dot
2.3/redundant/: albero_a4.dot  domain.hddl  gredy_search_result.txt  minimal-problem.hddl  parser.py  raw_plan.dot
2.4/: README.md  domain.pddl  domain_old.pddl  domain_opt.pddl  output_piano_opt.txt  output_plan6.txt  output_plan7.txt  output_plan8.txt  problem.pddl  problem_old.pddl  problem_opt.pddl
2.4/base/: domain.pddl  output.txt  output_short.txt  problem.pddl
2.4/drone/: domain.pddl  output.txt  output_plan4.txt  output_plan5.txt  output_plan6.txt  output_planD.txt  problem.pddl
2.4/optimization-attempts/: domain.pddl  output_piano_opt.txt  problem.pddl
2.4/popf/: domain.pddl  output_plan5.txt  output_plan6.txt  problem.pddl  problem_original.pddl
2.4/v1/: domain.pddl  output_plan3.txt  problem.pddl
2.5/: HOWTORUN.md  README.md  install_terminal.sh
2.5/install/: local_setup.sh  setup.bash  setup.sh  setup.zsh
2.5/install/museum/lib/museum/: activate_seal  cool_artifact_while_carrying_in_pod_slot_1  cool_artifact_while_carrying_slot_1  drop_pod_slot_1  fly_into_seismic_room  move_to_pressurized_room  move_to_unpressurized_room  pick_up_empty_pod_slot_1  pick_up_full_pod_slot_1  pick_up_slot_1  pick_up_slot_2  put_in_pod_slot_1  release_artifact_from_pod_slot_1  release_artifact_slot_1  release_artifact_slot_2
2.5/install/museum/share/museum/: local_setup.bash  local_setup.dsv  (+8 more)
2.5/log/: latest_build
2.5/museum/: CMakeLists.txt  commands.sh  commands_drone.sh  commands_easy.sh  output.txt  package.xml
2.5/museum/launch/: launch.py
2.5/museum/launch/install/: local_setup.sh  setup.sh
2.5/museum/launch/log/: latest_build
2.5/museum/pddl/: domain.pddl
2.5/museum/src/: activate_seal.cpp  cool_artifact_while_carrying_in_pod_slot_1.cpp  cool_artifact_while_carrying_slot_1.cpp  drop_pod_slot_1.cpp  fly_into_seismic_room.cpp  move_to_pressurized_room.cpp  move_to_unpressurized.cpp  move_to_unpressurized_room.cpp  pick_up_empty_pod_slot_1.cpp  pick_up_full_pod_slot_1.cpp  pick_up_slot_1.cpp  pick_up_slot_2.cpp  put_in_pod_slot_1.cpp  release_artifact_from_pod_slot_1.cpp  release_artifact_slot_1.cpp  release_artifact_slot_2.cpp
2.5/plansys2_simple_example/: commands.sh
2.5/plansys2_simple_example/launch/install/: local_setup.sh  setup.sh
2.5/plansys2_simple_example/launch/log/: latest_build
2.5/plansys2_ws/: CMakeLists.txt  README.md  package.xml  plan.md  terminal_commands.txt
2.5/plansys2_ws/launch/: commands  museum_plansys2_launch.py
2.5/plansys2_ws/src/: action_node.cpp
test_example/: sas_plan  test_domain.pddl  test_problem.pddl
visualization_tool/: README.md  combined_optic_viz.py  comic_book.py  comic_viewer.py  generate_compact_diagram.py  main.py  optic_parser.py  parser.py  policy_visualization.py  renderer.py  requirements.txt  temporal_diagram.py  trace.json  world.py
visualization_tool_2/: main.py
(+44 files in other folders)
